fix new feature
