# main.go
@@ -22,7 +22,7 @@ import (
 // @title User API
 // @description API for user management
 // @version 1.0
-// @host golang-my-portfolio-backend.onrender.com
+// @host localhost:8080
 // @BasePath /api/v1
 func main() {
 
@@ -105,6 +105,7 @@ func main() {
 		data := v1.Group("/data")
 		{
 			data.GET("/", alldata.GetAllData)
+			data.GET("/init", alldata.PostAllData)
 			data.DELETE("/", alldata.DeleteAllData)
 		}
 
